--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ img {
 .profile-container {
   position: relative;
   top: 50px;
-  left: 100px;
+  left: 200px;
+  margin-right: 1100px;
 }
 
 .profile-image{
