--- a/style.css
+++ b/style.css
@@ -80,11 +80,10 @@ img {
   text-align: center;
 }
 
-.profile-container {
-  position: relative;
-  top: 50px;
-  left: 200px;
-  margin-right: 1100px;
+/* Custom container for profile */
+.custom-container {
+  width: 80%; /* Set the width to 70% */
+  margin: 0 auto; /* Center the container horizontally */
 }
 
 .profile-image{
